fixed spacing issue with image

--- a/gh-pages/css/home.css
+++ b/gh-pages/css/home.css
@@ -33,7 +33,6 @@ body {
     padding: 0;
 }
 
-#credit {
-    transform: translateY(-100px);
-    float: right;
+#splash {
+    width: 100vw;
 }
